[package]
name = "libfranka-rs"
version = "0.9.0"
authors = ["Marco Boneberger <m.boneberger@tu-bs.de>"]
edition = "2018"
license = "EUPL-1.2"
description = "Library to control Franka Emika robots"
categories = ["science::robotics"]
keywords = ["franka", "emika", "real-time", "panda", "libfranka"]
repository = "https://github.com/marcbone/libfranka-rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "franka"
path = "src/lib.rs"

[[example]]
name = "cartesian_impedance_control"
path = "examples/cartesian_impedance_control.rs"

[[example]]
name = "communication_test"
path = "examples/communication_test.rs"

[[example]]
name = "download_model"
path = "examples/download_model.rs"

[[example]]
name = "echo_robot_state"
path = "examples/echo_robot_state.rs"

[[example]]
name = "generate_cartesian_pose_motion"
path = "examples/generate_cartesian_pose_motion.rs"

[[example]]
name = "generate_cartesian_velocity_motion"
path = "examples/generate_cartesian_velocity_motion.rs"

[[example]]
name = "generate_consecutive_motions"
path = "examples/generate_consecutive_motions.rs"

[[example]]
name = "generate_elbow_motion"
path = "examples/generate_elbow_motion.rs"

[[example]]
name = "generate_joint_position_motion"
path = "examples/generate_joint_position_motion.rs"

[[example]]
name = "generate_joint_velocity_motion"
path = "examples/generate_joint_velocity_motion.rs"

[[example]]
name = "grasp_object"
path = "examples/grasp_object.rs"

[[example]]
name = "mirror_robot"
path = "examples/mirror_robot.rs"

[[example]]
name = "print_joint_poses"
path = "examples/print_joint_poses.rs"

[profile.dev]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_repr = "0.1"
libc = "0.2"
nix = "0.20.0"
mio = { version = "0.7", features = ["os-poll", "tcp", "udp"] }
num-derive = "0.3"
num-traits = "0.2"
nalgebra = "0.23"
thiserror = "1.0"
libloading = "0.7.0"

[dev-dependencies]
clap = { version = "3.1.7", features = ["derive"] }
mockall = "0.9.1"
float_extras = "0.1.6"
